--- a/src/containers/whatGPT3/whatgpt3.css
+++ b/src/containers/whatGPT3/whatgpt3.css
@@ -34,9 +34,9 @@
     margin: 0;
 }
 
-.gpt3__whatgpt3-feature .gpt3__features-container__feature-text{
+/* .gpt3__whatgpt3-feature .gpt3__features-container__feature-text{
     max-width: 700px;
-}
+} */
 
 .gpt3__whatgpt3-heading{
     display: flex;
@@ -69,9 +69,9 @@
     
 }
 
-.gpt3__whatgp3-container{
+.gpt3__whatgpt3-container{
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     flex-direction: row;
     margin-top: 2rem;
 }
